--- a/css/_galeria.scss
+++ b/css/_galeria.scss
@@ -21,35 +21,35 @@
     filter: grayscale(100%);
 }
 #img1 {
-    background-image: url(/assets/img/galeria/Lap1.jpg);
+    background-image: url(../assets/img/galeria/Lap1.jpg);
     @include imgstyle();
 }
 #img2 {
-    background-image: url(/assets/img/galeria/Lap2.jpg);
+    background-image: url(../assets/img/galeria/Lap2.jpg);
     @include imgstyle();
 }
 #img3 {
-    background-image: url(/assets/img/galeria/Lap3.jpg);
+    background-image: url(../assets/img/galeria/Lap3.jpg);
     @include imgstyle();
 }
 #img4 {
-    background-image: url(/assets/img/galeria/Lap4.jpg);
+    background-image: url(../assets/img/galeria/Lap4.jpg);
     @include imgstyle();
 }
 #img5 {
-    background-image: url(/assets/img/galeria/Lap5.jpg);
+    background-image: url(../assets/img/galeria/Lap5.jpg);
     @include imgstyle();
 }
 #img6 {
-    background-image: url(/assets/img/galeria/Lap6.jpg);
+    background-image: url(../assets/img/galeria/Lap6.jpg);
     @include imgstyle();
 }
 #img7 {
-    background-image: url(/assets/img/galeria/Lap7.jpg);
+    background-image: url(../assets/img/galeria/Lap7.jpg);
     @include imgstyle();
 }
 #img8 {
-    background-image: url(/assets/img/galeria/Lap8.jpg);
+    background-image: url(../assets/img/galeria/Lap8.jpg);
     @include imgstyle();
 }
 /******  MEDIA QUERYS  ******/
